Fix bug: tuple is released if gc caused. And create DemoApplication.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.kumabook"
-      android:versionCode="1"
-      android:versionName="1.0">
+	package="com.kumabook" android:versionCode="1" android:versionName="1.0">
+	<application
+	    android:name="com.kumabook.demo.DemoApplication" 
+	    android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".demo.FirstActivity" android:label="@string/app_name"
+			android:screenOrientation="portrait">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".demo.SecondActivity" android:label="@string/app_name"
+			android:screenOrientation="portrait">
+		</activity>
 
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-
-
-    </application>
+	</application>
 </manifest>
